--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A text to nucleotide converter for the scientifically curious",
   "main": "server.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jeff Shapiro",
@@ -11,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
-    "mongoose": "^4.4.17"
+    "mongoose": "^4.4.17",
+    "nodemon": "^1.11.0"
   }
 }
