--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.1",
+    "dotenv": "^2.0.0",
     "express": "^4.13.4",
+    "express-session": "^1.14.1",
     "mongoose": "^4.4.17"
   }
 }
